# canonicalwebteam.docstring-extractor

./: pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
canonicalwebteam/docstring_extractor/: __init__.py
