[tool.poetry]
name = "canonicalwebteam.docstring-extractor"
version = "1.2.0"
description = "Get Python docstrings from files"
authors = ["Canonical Web Team <webteam@canonical.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/canonical-web-and-design/canonicalwebteam.docstring-extractor"
repository = "https://github.com/canonical-web-and-design/canonicalwebteam.docstring-extractor"
documentation = "https://github.com/canonical-web-and-design/canonicalwebteam.docstring-extractor"

keywords = ["docstring", "docstrings", "parser"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[[tool.poetry.packages]]
include = 'canonicalwebteam'

[tool.poetry.dependencies]
python = "^3.8"
docstring-parser = "^0.14.1"

[build-system]
requires = ['poetry.core>=1.3']
build-backend = 'poetry.core.masonry.api'
